# data-science-playbook

./: .flake8  .markdownlint-cli2.jsonc  .markdownlint.yaml  .pre-commit-config.yaml  .pydocstyle  LICENSE  README.md  pyproject.toml
references/best-practices/: codes-and-workflow.md  environment-setup.md  tools-selection.md
references/cheat-sheets/: python-core-elements.md
