[tool.poetry]
name = "data-science-playbook"
version = "0.1.0"
description = ""
authors = ["Jony Zambrano <jonyzambrano01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.10"
ipykernel = "^6.13.0"
jupyter = "^1.0.0"
gitlint = "=0.17.0"
pre-commit = "^2.18.1"
black = "=22.1.0"
isort = "=5.10.1"
flake8 = "=4.0.1"
pep8-naming = "=0.12.1"
mypy = "=0.931"
pydocstyle = "=6.1.1"
nbstripout = "=0.5.0"
jupytext = "=1.13.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
| dist
)/
'''